Fixed imageto align with text in contact section

--- a/student-store-ui/src/components/Home/Home.css
+++ b/student-store-ui/src/components/Home/Home.css
@@ -51,26 +51,33 @@
 .contact .content{
   display: flex;
   flex-direction: column;
-
 }
+
 .contact .content .summary{
   background-color: #2c4047;
+  display: flex;
+  flex-direction: row;
+  
 }
 .contact .content .summary .info{
   color: white;
   padding: 28px 36px;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+
 }
 .contact .content .summary .info li{
   margin-bottom: 18px;
   display: flex;
   align-items: center;
   font-size: 18px; 
+  width: 100%;
 }
 .contact .content .summary .info li span{
   margin-right: 20px;
   width: 100px;
+
 }
 .contact .content .summary .media{
   display: flex;
@@ -80,7 +87,8 @@
   height: 330px;
 }
 .contact .content .summary .media img{
-  transform: translateY(-2px);
+
+  
 }
 
 .footer{
